# Polari

./: Cargo.toml  README.md
frontend/: index.html  script.js  style.css
frontend/static/css/: style.css
frontend/static/js/: add.js  scan.js  script.js  track.js
frontend/template/: add.html  index.html  scan.html  track.html
python_server/: ard.ino  get_data_redis.py  main.py  py_client_embedded.py  pyvenv.cfg  test.py  try.sh
src/: block.rs  blockchain.rs  lib.rs  main.rs  net_message.rs  p2p.rs
