

[package]
name = "polari"
version = "0.1.0"
edition = "2021"

[dependencies]
# "tokio"  → enables mdns::tokio, tcp::tokio
# "macros" → enables #[derive(NetworkBehaviour)]
libp2p = { version = "0.52", features = [
    "gossipsub",
    "mdns",
    "noise",
    "tcp",
    "yamux",
    "tokio",
    "macros",
] }
tokio   = { version = "1",    features = ["full"] }
futures = "0.3"

serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
bincode     = "1"
redis       = "0.23"
sha2        = "0.10"
hex         = "0.4"
chrono      = { version = "0.4", features = ["serde"] }
log                = "0.4"
pretty_env_logger  = "0.5"